@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-12-23T01:46:41Z",
-  "count_outdated" : 1738,
-  "uniques_outdated" : 983,
+  "timestamp" : "2024-12-26T01:43:43Z",
+  "count_outdated" : 1739,
+  "uniques_outdated" : 984,
   "count" : 1740,
   "uniques" : 985,
   "clones" : [
-    {
-      "timestamp": "2024-12-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-12-22T00:00:00Z",
       "count": 1,
